# object-store-rs

./: Cargo.toml  README.md  go.work  go.work.sum  rust-toolchain.toml
go/: go.mod  go.sum  main.go
src/: main.rs  store.rs
