[package]
name = "object-store-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
bytes = "1.5"
futures = "0.3"
futures-util = "0.3"
humansize = "2.0.0"
object_store = { version = "0.9.0", features = ["gcp", "http", "aws"] }
tokio = { version = "1.0", features = ["full"] }
url = "2.5"
